--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h1>Repositorio remoto con GitHub</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non modi reiciendis praesentium tempora maxime autem nisi aperiam veniam provident necessitatibus, suscipit explicabo laudantium expedita asperiores sapiente rerum! Eligendi, provident commodi.</p>
 
+    <div>
+        <img src="" alt="">
+    </div>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto incidunt nam explicabo, voluptatum voluptate maxime nihil, nostrum error molestiae obcaecati harum repellat et quisquam ut, minus repellendus ea aspernatur debitis!</p>
+
 </body>
 </html>
